chore: ignore secrets dir

--- a/.gitignore
+++ b/.gitignore
@@ -46,7 +46,7 @@ terraform.rc
 terragrunt-debug.tfvars.json
 
 # End of https://www.toptal.com/developers/gitignore/api/terraform,terragrunt
-secrets
+.secrets
 **/.infracost*
 **/.terraform.lock.hcl
 
