chore:  address pre-commit issues

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,10 @@ repos:
         args: ["--maxkb=800"]
       - id: check-ast
       - id: check-executables-have-shebangs
+        exclude: |
+          (?x)^(
+            ansible/roles/k8s-oidc/templates/update-jwks.sh.j2
+          )$
       - id: check-json
       - id: check-shebang-scripts-are-executable
       - id: check-yaml
@@ -51,5 +55,5 @@ repos:
     rev: v0.4.9
     hooks:
       - id: ruff
-        args: [ --fix ]
+        args: [--fix]
       - id: ruff-format
