--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,6 @@ kubernetes/hetzner-personal/applications/listmonk/secrets.env
 kubernetes/hetzner-personal/applications/listmonk/.envrc
 .envrc
 kubernetes/raspberry-pi/applications/gh-self-hosted-runner/secrets.env
+
+**/__pycache__
+*.py[cod]
