chore: upgrade pre-commit ruff hook to v5

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -160,6 +160,7 @@ jobs:
         run: poetry run ./main.py
 
   submit-hackernews:
+    if: needs.fetch-hn-submissions.outputs.length > 0
     needs: fetch-hn-submissions
     runs-on: ubuntu-latest
     strategy:
