fix(CI): output the length from the first job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -144,6 +144,7 @@ jobs:
         working-directory: ./applications/hn-submission
     outputs:
       matrix: ${{ steps.matrix.outputs.matrix }}
+      length: ${{ steps.matrix.outputs.length }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
