fix: add selector for pip smon

--- a/kubernetes/raspberry-pi/applications/check-public-ip/kustomization.yml
+++ b/kubernetes/raspberry-pi/applications/check-public-ip/kustomization.yml
@@ -20,7 +20,7 @@ replacements:
       fieldPath: spec.template.metadata.labels
     targets:
       - select:
-          kind: ServiceMonitor
+          kind: VMServiceScrape
           name: check-public-ip
         fieldPaths:
           - spec.selector.matchLabels
