--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -131,7 +131,7 @@ jobs:
         with:
           sarif_file: results.sarif
 
-  fetch-hn-submissions:
+  submit-hackernews:
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     # if: github.event_name == 'schedule' && github.event.schedule == '30 13 * * *'
     runs-on: ubuntu-latest
@@ -142,9 +142,6 @@ jobs:
     defaults:
       run:
         working-directory: ./applications/hn-submission
-    outputs:
-      matrix: ${{ steps.matrix.outputs.matrix }}
-      length: ${{ steps.matrix.outputs.length }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -156,39 +153,22 @@ jobs:
         run: |
           pip install 'poetry<2'
           poetry install
-      - id: matrix
+      - id: db
         name: Fetch Hacker News submissions
         run: poetry run ./main.py
-
-  submit-hackernews:
-    if: ${{ needs.fetch-hn-submissions.outputs.length > 0 }}
-    needs: fetch-hn-submissions
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-    strategy:
-      matrix: ${{ fromJson(needs.fetch-hn-submissions.outputs.matrix) }}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Show submission information
+      - if: steps.db.outputs.found
+        name: Show submission information
         run: |
-          echo "${{ matrix.id }}: ${{ matrix.title }} ${{ matrix.url }}"
-      # - name: Submit link to Hacker News
+          echo "${{ steps.db.outputs.id }}: ${{ steps.db.outputs.title }} ${{ steps.db.outputs.url }}"
+      # - if: steps.db.outputs.found
+      #   name: Submit link to Hacker News
       #   uses: meysam81/submit-hackernews@main
       #   with:
       #     username: ${{ secrets.HACKERNEWS_USERNAME }}
       #     password: ${{ secrets.HACKERNEWS_PASSWORD }}
-      #     title: ${{ matrix.title }}
-      #     url: ${{ matrix.url }}
+      #     title: ${{ steps.db.outputs.title }}
+      #     url: ${{ steps.db.outputs.url }}
       #     verbose: true
-      - name: Install poetry
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ env.PYTHON_VERSION }}
-      - name: Install dependencies
-        run: |
-          pip install 'poetry<2'
-          poetry install
-      - name: Mark story as submitted
-        run: poetry run ./main.py --submit --id "${{ matrix.id }}"
+      - if: steps.db.outputs.found
+        name: Mark story as submitted
+        run: poetry run ./main.py --submit --id "${{ steps.db.outputs.id }}"
