chore(pip): upgrade to use the newer image

--- a/kubernetes/raspberry-pi/applications/check-public-ip/kustomization.yml
+++ b/kubernetes/raspberry-pi/applications/check-public-ip/kustomization.yml
@@ -6,7 +6,7 @@ resources:
 
 images:
   - name: ghcr.io/meysam81/check-public-ip
-    newTag: v2
+    newTag: "9824721479"
 
 replacements:
   - source:
