--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -57,3 +57,9 @@ repos:
           - --fix
           - --select=I
       - id: ruff-format
+  - repo: https://github.com/tofuutils/pre-commit-opentofu
+    rev: v1.0.3
+    hooks:
+      - id: tofu_fmt
+      - id: tofu_tflint
+      - id: tofu_docs
