--- a/kubernetes/raspberry-pi/applications/reddit-submission/cronjob.yml
+++ b/kubernetes/raspberry-pi/applications/reddit-submission/cronjob.yml
@@ -20,10 +20,12 @@ spec:
                 - -c
               args:
                 - |
+                  set -eux
+
                   /app/main.py \
+                    --subreddit="""$(cat /data/subreddit.md)""" \
                     --title="""$(cat /data/title.md)""" \
-                    --message="""$(cat /data/submission.md)""" \
-                    --subreddit="""$(cat /data/subreddit.md)"""
+                    --message="""$(cat /data/submission.md)"""
               resources: {}
               volumeMounts:
                 - name: submission
@@ -45,5 +47,5 @@ spec:
             - name: tmp
               emptyDir: {}
           restartPolicy: OnFailure
-  schedule: 0 17 19 8 *
+  schedule: 0 17 20 8 *
 status: {}
