--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,9 +13,9 @@ on:
 
 
 env:
-  tf_version: "1.5.7"
-  tg_version: "0.53.0"
-  working_dir: "live"
+  tofu_version: 1.8.1
+  tg_version: 0.67.0
+  TF_PLUGIN_CACHE_DIR: ${{ github.workspace }}/.terraform.d/plugin-cache
   PYTHON_VERSION: 3.12
 
 permissions:
@@ -38,37 +38,43 @@ jobs:
           tg_dir: ${{ env.working_dir }}
           tg_command: "hclfmt --terragrunt-check --terragrunt-diff"
 
-  plan:
-    needs: lint
-    permissions: write-all
-    strategy:
-      fail-fast: false
-      matrix:
-        directory:
-          - live/cloudflare
-    uses: ./.github/workflows/sync.yml
-    with:
-      aws-region: ap-southeast-1
-      command: "plan"
-      comment: "1"
-      working-dir: ${{ matrix.directory }}
-    secrets: inherit
-
   deploy:
-    needs: plan
-    permissions: write-all
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    env:
+      AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+      working_dir: ${{ matrix.working_dir }}
     strategy:
       fail-fast: false
       matrix:
-        directory:
-          - live/cloudflare
-    if: github.ref == 'refs/heads/main'
-    uses: ./.github/workflows/sync.yml
-    with:
-      aws-region: ap-southeast-1
-      command: apply -auto-approve
-      working-dir: ${{ matrix.directory }}
-    secrets: inherit
+        working_dir:
+          - live/newsletter-server
+    environment: prod
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Create Terraform Plugin Cache Dir
+        run: mkdir -p $TF_PLUGIN_CACHE_DIR
+      - name: Terraform Plugin Cache
+        uses: actions/cache@v4
+        with:
+          path: ${{ env.TF_PLUGIN_CACHE_DIR }}
+          key: ${{ runner.os }}-terraform-plugin-cache-${{ hashFiles('**/.terraform.lock.hcl') }}
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: ${{ secrets.AWS_IAM_ROLE }}
+          role-session-name: ci-${{ github.ref_name }}-${{ github.run_id }}
+          aws-region: ${{ vars.AWS_REGION }}
+      - name: Deploy
+        uses: gruntwork-io/terragrunt-action@v2
+        env:
+          TF_TOKEN_app_terraform_io: ${{ secrets.TF_TOKEN_app_terraform_io }}
+        with:
+          tofu_version: ${{ env.tofu_version }}
+          tg_version: ${{ env.tg_version }}
+          tg_dir: ${{ env.working_dir }}
+          tg_command: apply
 
   trivy:
     if: contains(fromJson('["push","pull_request","schedule"]'), github.event_name)
