--- a/live/newsletter-server/files/haproxy.cfg
+++ b/live/newsletter-server/files/haproxy.cfg
@@ -43,11 +43,7 @@ frontend stats
 frontend http
   bind :80
 
-  acl well_known_path path_beg /.well-known/acme-challenge/
-
-  redirect scheme https code 301 if !well_known_path !{ ssl_fc }
-
-  use_backend well_known_backend if well_known_path
+  redirect scheme https code 301 if !{ ssl_fc }
 
   default_backend default_backend
 
@@ -58,11 +54,15 @@ frontend https
   http-request track-sc0 src
   http-request deny deny_status 429 if { sc_http_req_rate(0) gt 20 }
 
+  acl newsletter hdr(host) -i newsletter.developer-friendly.blog
+
+  use_backend k8s if newsletter
+
   default_backend default_backend
 
-backend well_known_backend
+backend k8s
   option tcp-check
-  server wellknown_server 127.0.0.1:8001 check inter 2000 rise 1 fall 3
+  server k8s 127.0.0.1:30080 check inter 2000 rise 1 fall 3
 
 backend default_backend
-  http-request deny deny_status 404 content-type text/html string "<h1>Page Not Found</h1>"
+  http-request deny deny_status 404 content-type text/html file /etc/haproxy/errors/404.html
