--- a/live/newsletter-server/files/haproxy.cfg
+++ b/live/newsletter-server/files/haproxy.cfg
@@ -7,6 +7,8 @@ global
   user haproxy
   group haproxy
 
+  maxconn 10000
+
   # Default SSL material locations
   ca-base /etc/ssl/certs
   crt-base /etc/ssl/private
@@ -18,6 +20,8 @@ global
   tune.ssl.default-dh-param 2048
 
 defaults
+  backlog 1000
+
   log     global
   mode    http
   option  httplog
@@ -52,7 +56,7 @@ frontend https
 
   stick-table type ip size 1m expire 10s store http_req_rate(10s)
   http-request track-sc0 src
-  http-request deny deny_status 429 if { sc_http_req_rate(0) gt 20 }
+  http-request deny deny_status 429 content-type text/html file /etc/haproxy/errors/429.html if { sc_http_req_rate(0) gt 50 }
 
   acl newsletter hdr(host) -i newsletter.developer-friendly.blog
 
