chore(CI): let github reconcile OIDC config

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,6 +60,7 @@ jobs:
         working_dir:
           - live/newsletter-server
           - live/cloudflare
+          - live/k8s-oidc-provider
     environment: prod
     steps:
       - name: Checkout
