--- a/live/newsletter-server/files/haproxy.cfg
+++ b/live/newsletter-server/files/haproxy.cfg
@@ -16,7 +16,7 @@ global
   # See: https://ssl-config.mozilla.org/#server=haproxy&server-version=2.0.3&config=intermediate
   ssl-default-bind-ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384
   ssl-default-bind-ciphersuites TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256
-  ssl-default-bind-options ssl-min-ver TLSv1.3 no-tls-tickets
+  ssl-default-bind-options ssl-min-ver TLSv1.2 no-tls-tickets
   tune.ssl.default-dh-param 2048
 
 defaults
@@ -65,7 +65,8 @@ frontend https
   default_backend default_backend
 
 backend k8s
-  option tcp-check
+  option httpchk GET /
+  http-check expect status 200
   server k8s 127.0.0.1:30080 check inter 2000 rise 1 fall 3
 
 backend default_backend
