chore: use haproxy http format for errorfiles

--- a/live/newsletter-server/files/haproxy.cfg
+++ b/live/newsletter-server/files/haproxy.cfg
@@ -31,7 +31,9 @@ defaults
   timeout server  50000
   errorfile 400 /etc/haproxy/errors/400.http
   errorfile 403 /etc/haproxy/errors/403.http
+  errorfile 404 /etc/haproxy/errors/404.http
   errorfile 408 /etc/haproxy/errors/408.http
+  errorfile 429 /etc/haproxy/errors/429.http
   errorfile 500 /etc/haproxy/errors/500.http
   errorfile 502 /etc/haproxy/errors/502.http
   errorfile 503 /etc/haproxy/errors/503.http
@@ -54,9 +56,9 @@ frontend http
 frontend https
   bind :443 ssl crt /etc/haproxy/certs/ alpn h2,http/1.1
 
-  stick-table type ip size 1m expire 10s store http_req_rate(10s)
+  stick-table type ip size 1m expire 60s store http_req_rate(60s)
   http-request track-sc0 src
-  http-request deny deny_status 429 content-type text/html file /etc/haproxy/errors/429.html if { sc_http_req_rate(0) gt 50 }
+  http-request deny deny_status 429 if { sc_http_req_rate(0) gt 60 }
 
   acl newsletter hdr(host) -i newsletter.developer-friendly.blog
 
@@ -70,4 +72,4 @@ backend k8s
   server k8s 127.0.0.1:30080 check inter 2000 rise 1 fall 3
 
 backend default_backend
-  http-request deny deny_status 404 content-type text/html file /etc/haproxy/errors/404.html
+  http-request deny deny_status 404
