--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,6 +88,32 @@ jobs:
           tg_dir: ${{ env.working_dir }}
           tg_command: apply
 
+  ansible-playbook:
+    runs-on: ubuntu-latest
+    env:
+      HCLOUD_TOKEN: ${{ secrets.HCLOUD_TOKEN }}
+      CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+      TF_VAR_cloudflare_api_token: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+    permissions:
+      contents: read
+    defaults:
+      run:
+        working-directory: ./ansible
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Install requirements
+        run: ansible-galaxy install -r requirements.yml
+      - name: Fetch the ssh private key from TF stack
+        working-directory: ./live/newsletter-server
+        run: |
+          mkdir -p ~/.ssh
+          tofu init
+          tofu output -raw ssh_private_key > ~/.ssh/newsletter-server
+          chmod 600 ~/.ssh/newsletter-server
+      - name: Run Ansible playbook
+        run: ansible-playbook newsletter-server/main.yml
+
   trivy:
     if: contains(fromJson('["push","pull_request","schedule"]'), github.event_name)
     runs-on: ubuntu-latest
